Fixed top bar wrapping.

--- a/src/components/top-bar/top-bar.css
+++ b/src/components/top-bar/top-bar.css
@@ -15,3 +15,6 @@
     font-weight: bolder;
 }
 
+.wbdv-text-nowrap {
+    text-wrap: none;
+}
